--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
   ],
   "require": {
     "php": ">=5.6",
-    "nette/mail": "~2.4.3",
+    "latte/latte": "~2.4.7",
+    "nette/mail": "~2.4.4",
     "nette/di": "~2.4.10"
   },
   "require-dev": {
@@ -46,7 +47,7 @@
   },
   "extra": {
     "branch-alias": {
-      "dev-master": "0.1.x-dev"
+      "dev-master": "0.2.x-dev"
     }
   }
 }
