--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,15 @@
 {
   "name": "contributte/mailing",
   "description": "Sending emails with pleasure and prepared templates.",
-  "keywords": ["nette", "mail", "mailing"],
+  "keywords": [
+    "nette",
+    "mail",
+    "mailing"
+  ],
   "type": "library",
-  "license": ["MIT"],
+  "license": [
+    "MIT"
+  ],
   "homepage": "https://github.com/contributte/mailing",
   "authors": [
     {
@@ -12,17 +18,20 @@
     }
   ],
   "require": {
-    "php": ">=5.6",
-    "nette/application": "^2.4.9",
-    "nette/di": "~2.4.10",
-    "nette/mail": "~2.4.4",
-    "nette/utils": "~2.4.9",
-    "latte/latte": "~2.4.7"
+    "php": ">= 7.1",
+    "nette/application": "~2.4.12",
+    "nette/di": "~2.4.12",
+    "nette/mail": "~2.4.5",
+    "nette/utils": "~2.5.2",
+    "latte/latte": "~2.4.8"
   },
   "require-dev": {
-    "ninjify/qa": "^0.4.0",
+    "ninjify/qa": "^0.8.0",
     "ninjify/nunjuck": "^0.2.0",
     "mockery/mockery": "^0.9.9"
+  },
+  "conflict": {
+    "nette/http": "<2.4.9"
   },
   "autoload": {
     "psr-4": {
@@ -42,10 +51,21 @@
     "tester": [
       "tester -s -p php --colors 1 -C tests/cases"
     ],
-    "tester-coverage": [
+    "coverage": [
       "tester -s -p php --colors 1 -C -d extension=xdebug.so --coverage ./coverage.xml --coverage-src ./src tests/cases"
+    ],
+    "phpstan-install": [
+      "mkdir -p temp/phpstan",
+      "composer require -d temp/phpstan phpstan/phpstan:0.9.2",
+      "composer require -d temp/phpstan phpstan/phpstan-nette:0.9",
+      "composer require -d temp/phpstan phpstan/phpstan-strict-rules:0.9"
+    ],
+    "phpstan": [
+      "temp/phpstan/vendor/bin/phpstan analyse -l max -c phpstan.neon src"
     ]
   },
+  "minimum-stability": "dev",
+  "prefer-stable": true,
   "extra": {
     "branch-alias": {
       "dev-master": "0.2.x-dev"
