--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,11 @@
+# Not archived
+.docs export-ignore
+tests export-ignore
+.editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
-.github export-ignore
 .travis.yml export-ignore
-tests/ export-ignore
-.docs/ export-ignore
-*.sh eol=lf
+LICENSE export-ignore
+README.md export-ignore
+phpstan.neon export-ignore
+ruleset.xml
