initial support of Nette 3.0

--- a/composer.json
+++ b/composer.json
@@ -17,11 +17,11 @@
   ],
   "require": {
     "php": ">= 7.1",
-    "nette/application": "~2.4.12",
-    "nette/di": "~2.4.12",
-    "nette/mail": "~2.4.5",
-    "nette/utils": "~2.5.2",
-    "latte/latte": "~2.4.8 || ~2.5.1"
+    "nette/application": "^3.0",
+    "nette/di": "^3.0",
+    "nette/mail": "^3.0",
+    "nette/utils": "^3.0",
+    "latte/latte": "^2.5.1"
   },
   "require-dev": {
     "ninjify/qa": "^0.8.0",
@@ -33,7 +33,7 @@
     "phpstan/phpstan-strict-rules": "^0.11"
   },
   "conflict": {
-    "nette/http": "<2.4.9"
+    "nette/latte": "<2.5.0"
   },
   "autoload": {
     "psr-4": {
