--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     "php": "^7.2",
     "nette/application": "~3.0.0",
     "nette/di": "~3.0.0",
-    "nette/mail": "~3.0.1",
+    "nette/mail": "~3.0.1|~3.1.0",
     "latte/latte": "~2.5.1"
   },
   "require-dev": {
