--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "nette/application": "~3.0.0",
     "nette/di": "~3.0.0",
     "nette/mail": "~3.0.1|~3.1.0",
-    "latte/latte": "~2.5.1"
+    "latte/latte": "~2.5.1|~2.6.0"
   },
   "require-dev": {
     "mockery/mockery": "^1.2.4",
