--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     }
   ],
   "require": {
-    "php": "^7.2",
+    "php": ">=7.2",
     "nette/application": "~3.0.0",
     "nette/di": "~3.0.0",
     "nette/mail": "~3.0.1|~3.1.0",
