--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,10 @@
     "mockery/mockery": "^1.2.4",
     "ninjify/nunjuck": "^0.3.0",
     "ninjify/qa": "^0.10.0",
-    "phpstan/extension-installer": "^1.0",
-    "phpstan/phpstan-deprecation-rules": "^0.11",
-    "phpstan/phpstan-nette": "^0.11",
-    "phpstan/phpstan-shim": "^0.11",
-    "phpstan/phpstan-strict-rules": "^0.11"
+    "phpstan/phpstan": "^0.12",
+    "phpstan/phpstan-deprecation-rules": "^0.12",
+    "phpstan/phpstan-nette": "^0.12",
+    "phpstan/phpstan-strict-rules": "^0.12"
   },
   "conflict": {
     "nette/di": "<3.0.0"
