--- a/composer.json
+++ b/composer.json
@@ -17,15 +17,15 @@
   ],
   "require": {
     "php": ">=7.2",
-    "nette/application": "~3.0.0",
-    "nette/di": "~3.0.0",
-    "nette/mail": "~3.0.1|~3.1.0",
+    "nette/application": "^3.0.0",
+    "nette/di": "^3.0.0",
+    "nette/mail": "^3.0.1",
     "latte/latte": "^2.5.1"
   },
   "require-dev": {
     "mockery/mockery": "^1.2.4",
-    "ninjify/nunjuck": "^0.3.0",
-    "ninjify/qa": "^0.10.0",
+    "ninjify/nunjuck": "^0.4",
+    "ninjify/qa": "^0.12",
     "phpstan/phpstan": "^0.12",
     "phpstan/phpstan-deprecation-rules": "^0.12",
     "phpstan/phpstan-nette": "^0.12",
