--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
     "nette/application": "^3.1.0",
     "nette/di": "^3.0.7",
     "nette/mail": "^3.1.5",
-    "latte/latte": "^2.9.2"
+    "latte/latte": "^2.9.2 || ^3.0.0"
   },
   "require-dev": {
     "mockery/mockery": "^1.3.3",
