--- a/composer.json
+++ b/composer.json
@@ -17,10 +17,10 @@
   ],
   "require": {
     "php": ">=8.1",
-    "nette/application": "^3.1.0",
-    "nette/di": "^3.0.7",
-    "nette/mail": "^3.1.5",
-    "latte/latte": "^2.9.2 || ^3.0.0"
+    "nette/application": "^3.1.14",
+    "nette/di": "^3.1.8",
+    "nette/mail": "^4.0.2",
+    "latte/latte": "^3.0.12"
   },
   "require-dev": {
     "mockery/mockery": "^1.3.3",
