--- a/composer.json
+++ b/composer.json
@@ -24,12 +24,9 @@
   },
   "require-dev": {
     "mockery/mockery": "^1.3.3",
-    "ninjify/nunjuck": "^0.4",
-    "ninjify/qa": "^0.12.1",
-    "phpstan/phpstan": "^1.0",
-    "phpstan/phpstan-deprecation-rules": "^1.0",
-    "phpstan/phpstan-nette": "^1.0",
-    "phpstan/phpstan-strict-rules": "^1.0"
+    "contributte/qa": "^0.4",
+    "contributte/tester": "^0.3",
+    "contributte/phpstan": "^0.1"
   },
   "conflict": {
     "nette/di": "<3.0.0"
