--- a/composer.json
+++ b/composer.json
@@ -17,16 +17,16 @@
   ],
   "require": {
     "php": ">=8.1",
-    "nette/application": "^3.1.14",
-    "nette/di": "^3.1.8",
-    "nette/mail": "^4.0.2",
-    "latte/latte": "^3.0.12"
+    "nette/application": "^3.2.7",
+    "nette/di": "^3.2.4",
+    "nette/mail": "^4.0.3",
+    "latte/latte": "^3.0.23"
   },
   "require-dev": {
     "mockery/mockery": "^1.3.3",
-    "contributte/qa": "^0.4",
-    "contributte/tester": "^0.3",
-    "contributte/phpstan": "^0.1"
+    "contributte/qa": "^0.4.0",
+    "contributte/phpstan": "^0.2.0",
+    "contributte/tester": "^0.4.0"
   },
   "conflict": {
     "nette/di": "<3.0.0"
