--- a/composer.json
+++ b/composer.json
@@ -38,7 +38,7 @@
   },
   "autoload-dev": {
     "psr-4": {
-      "Tests\\Contributte\\Mailing\\": "tests/"
+      "Tests\\": "tests"
     }
   },
   "minimum-stability": "dev",
